--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -9,131 +9,153 @@
 <body>
     <div id="wrapper">
         <div id="content">
-            <h2 class="ch">Daily Challenge</h2>
+            <h2>Daily Challenge December 15, 2020</h2>
 
-            <div class="ch" id="daily">
-                <p>December 15, 2020 (Level 1-2): Using the pieces 1, 6, and 5, make a straight line (the corner numbers that are next to eachother add up to 180). Extra (Level 3): Can you complete the puzzle without making perpendicular lines? Can you do it with creating perpendicular lines?</p>
+            <div id="daily">
+                <p>Level 1-2: Using the pieces 1, 6, and 5, make a straight line (the corner numbers that are next to eachother add up to 180). Extra (Level 3): Can you complete the puzzle without making perpendicular lines? Can you do it with creating perpendicular lines?</p>
                 <button id="dailyb" onclick="show('daily')">Show Solution</button>
                 <p class="sol" id="dailysol">Daily: There should be a red, purple, and yellow corner touching. Extra: The answer is yes to both questions. The corners might be red-purple-yellow for part one, and purple-red-yellow or red-yellow-purple for part two.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <h2 class="ch">Level 1 Challenges</h2>
+            <h2>Level 1 Challenges</h2>
 
-            <div class="ch" id="1">
+            <div id="1">
                 <p>1. Put the pieces 5 and 6 together so that the corner numbers that are next to each other add up to 90.</p>
                 <button id="1b" onclick="show(1)">Show Solution</button>
                 <p class="sol" id="1sol">1. There should be a yellow and a red corner touching</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <div class="ch" id="2">
+            <div id="2">
                 <p>2. Put the pieces 3, 4, and 5 together so that the corner numbers that are next to each other add up to 90.</p>
                 <button id="2b" onclick="show(2)">Show Solution</button>
-                <p class="sol" id="2sol">2. There should be three yellow corners touching</p>
+                <p class="sol" id="2sol">2. There should be three red corners touching</p>
             </div>
 
-            <br>
-            <br>
-            <div class="ch" id="3">
+            <br><br>
+
+            <div id="3">
                 <p>3. Put the pieces 8, 5, and 5 together so that the corner numbers that are next to each other add up to 180. Can you find 2 different ways to do it?</p>
                 <button id="3b" onclick="show(3)">Show Solution</button>
                 <p class="sol" id="3sol">3. There should be either a purple corner and two green corners or an orange, red, and yellow corner.</p>
             </div>
 
-            <br>
-            <br>
-            <div class="ch" id="4">
+            <br><br>
+
+            <div id="4">
                 <p>4. Put the pieces 5, 1, 4, 8, and 7 together so that the corner numbers that are next to each other add up to 360.</p>
                 <button id="4b" onclick="show(4)">Show Solution</button>
                 <p class="sol" id="4sol">4. There are multiple ways to solve this problem. Try to prove if you are correct.</p>
             </div>
 
-            <br>
-            <br>
-            <div class="ch" id="5">
+            <br><br>
+
+            <div id="5">
                 <p>5. Put the pieces 5, 1, 4, 8, 7, and 2 together so that the corner numbers that are next to each other add up to 360.</p>
                 <button id="5b" onclick="show(5)">Show Solution</button>
                 <p class="sol" id="5sol">5. There are multiple ways to solve this problem. Try to prove if you are correct.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <h2 class="ch">Level 2 Challenges</h2>
+            <h2>Level 2 Challenges</h2>
 
-            <div class="ch" id="6">
+            <div id="6">
                 <p>6. Put the pieces 2 and 4 together so that the shortest edge of 4 is parallel to a side on 2.</p>
                 <button id="6b" onclick="show(6)">Show Solution</button>
                 <p class="sol" id="6sol">6. The yellow corner should be next to the red corner.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <div class="ch" id="7">
+            <div id="7">
                 <p>7. Put the pieces 6, 5, and 7 together so that a side on 7 and a side on 6 are parallel. Do you have to use 5?</p>
                 <button id="7b" onclick="show(7)">Show Solution</button>
                 <p class="sol" id="7sol">7. The yellow corner on 7 should be touching the yellow corner on 6.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <div class="ch" id="8">
+            <div id="8">
                 <p>8. Put the pieces 1 and 6 together so that the shortest side on 1 is parallel to a side on 6.</p>
                 <button id="8b" onclick="show(8)">Show Solution</button>
                 <p class="sol" id="8sol">8. The longest side of 1 should lie along 6; the two yellow corners should be touching.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <div class="ch" id="9">
+            <div id="9">
                 <p>9. Put the pieces 1 and 6 together so that the longest side on 1 is parallel to a side on 6.</p>
                 <button id="9b" onclick="show(9)">Show Solution</button>
                 <p class="sol" id="9sol">9. The shortest side of 1 should lie along 6; the two yellow corners should be touching.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <h2 class="ch">Level 3 Challenges</h2>
-            <div class="ch" id="10">
+            <h2>Level 3 Challenges</h2>
+            <div id="10">
                 <p>10. Place two 5 pieces on top of each other so that green corners and orange corners overlap, and the two shortest sides overlap. Are the two longest sides perpendicular?</p>
                 <button id="10b" onclick="show(10)">Show Solution</button>
                 <p class="sol" id="10sol">10. Yes.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <div class="ch" id="11">
+            <div id="11">
                 <p>11. Using a 6 and two 7s, make a pair of parallel lines which are both perpendicular to a side of 6.</p>
                 <button id="11b" onclick="show(11)">Show Solution</button>
                 <p class="sol" id="11sol">11. There are two solutions: Use the purple angles to make two lines perpendicular to one side of 6. They are parallel. Alternatively, face one tip of 6 towards you. Lie the longest side of both 7’s along the “left” and “right” sides of 6, with the red corners pointing away from you.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <div class="ch" id="12">
+            <div id="12">
                 <p>12. Using the pieces 6, 2, 2, 1, 1, 7, 7, 4, make corners that form the intersection of three lines and add up to 360 degrees. Use all given pieces. The solution is not given, so use the fact that corners adding to 180 make a straight line to.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
 
-            <div class="ch" id="13">
+            <div id="13">
                 <p>13. Using as many pieces as you wish, make as many parallel lines as you can. This one isn’t in the answer key, so look back at level 2 and look for patterns to check your answer.</p>
             </div>
 
-            <br>
-            <br>
+            <br><br>
+
+            <h2>Additional Challenges</h2>
+
+            <div id="14">
+                <p>14 (Level 1). Put the pieces 8 and 5 together so that two corners that are next to each other add up to 90.</p>
+                <button id="14b" onclick="show(14)">Show Solution</button>
+                <p class="sol" id="14sol">14. There should be two green corners next to each other.</p>
+            </div>
+
+            <br><br>
+
+            <div id="15">
+                <p>15 (Level 2). Put the pieces 1, 1, 1, 1 together to form a quadrilateral (shape with four sides) with four 90-degree angles.</p>
+                <button id="15b" onclick="show(15)">Show Solution</button>
+                <p class="sol" id="15sol">15. Each corner of the quadrilateral should either be a purple corner or a pair of red and yellow corners.</p>
+            </div>
+
+            <br><br>
+
+            <div id="16">
+                <p>16 (Level 3). Put the pieces 7, 2, 4 together so that ONLY ONE 120 degree angle is formed and two lines are parallel. you are encouraged to find the solution on your own.</p>
+            </div>
+
+            <br><br>
+
+            <div id="17">
+                <p>17 (Level 1). Put the pieces 6, 1, 1 together so that two points form where the corners add up to 120.</p>
+                <button id="17b" onclick="show(17)">Show Solution</button>
+                <p class="sol" id="17sol">17. At each point, there should be two yellow corners.</p>
+            </div>
+
+            <br><br>
+
         </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
